k8s/elk-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: redbus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.10.2
          ports:
            - containerPort: 9200

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: redbus
spec:
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: redbus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.10.2
          command:
            - logstash
            - -e
            - |
              [...]
          ports:
            - containerPort: 5044

---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: redbus
spec:
  selector:
    app: logstash
  ports:
    - port: 5044
      targetPort: 5044

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: redbus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.10.2
          ports:
            - containerPort: 5601

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: redbus
spec:
  type: NodePort
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
      nodePort: 30601

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  namespace: redbus
spec:
  selector:
    matchLabels:
      app: filebeat

  template:
    metadata:
      labels:
        app: filebeat

    spec:
      serviceAccountName: filebeat
      terminationGracePeriodSeconds: 30

      containers:
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:7.17.13

          args:
            - "-c"
            - "/usr/share/filebeat/filebeat.yml"
            - "-e"

          securityContext:
            runAsUser: 0

          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi

          volumeMounts:
            - name: config
              mountPath: /usr/share/filebeat/filebeat.yml
              subPath: filebeat.yml
              readOnly: true

            - name: data
              mountPath: /usr/share/filebeat/data

            - name: varlogcontainers
              mountPath: /var/log/containers
              readOnly: true

            - name: varlog
              mountPath: /var/log
              readOnly: true
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true

      volumes:
        - name: config
          configMap:
            name: filebeat-config
            defaultMode: 0640

        - name: data
          hostPath:
            path: /var/lib/filebeat-data
            type: DirectoryOrCreate

        - name: varlogcontainers
          hostPath:
            path: /var/log/containers

        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
