k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: redbus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: bhavy0949/redbus-payment-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
        startupProbe:
          tcpSocket:
            port: 8083
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 60
        livenessProbe:
          tcpSocket:
            port: 8083
          initialDelaySeconds: 180
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          tcpSocket:
            port: 8083
          initialDelaySeconds: 120
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 6
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 600m
            memory: 1Gi
      imagePullSecrets:
      - name: docker-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: redbus
spec:
  selector:
    app: payment-service
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
  type: ClusterIP
