k8s/security-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-service
  namespace: redbus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: security-service
  template:
    metadata:
      labels:
        app: security-service
    spec:
      containers:
      - name: security-service
        image: bhavy0949/redbus-security-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
        startupProbe:
          tcpSocket:
            port: 8084
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 60
        livenessProbe:
          tcpSocket:
            port: 8084
          initialDelaySeconds: 180
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          tcpSocket:
            port: 8084
          initialDelaySeconds: 120
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 6
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 600m
            memory: 1Gi
      imagePullSecrets:
      - name: docker-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: security-service
  namespace: redbus
spec:
  selector:
    app: security-service
  ports:
  - protocol: TCP
    port: 8084
    targetPort: 8084
  type: ClusterIP
